[package]
name = "buildkit-sdk-rs"
description = "Rust SDK for BuildKit — programmatically construct LLB build graphs and submit them to a BuildKit daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
name = "buildkit_sdk_rs"
path = "src/lib.rs"

[dependencies]
buildkit-rs-client = { path = "crates/client" }
buildkit-rs-ignore = { version = "0.1.0", path = "crates/ignore" }
buildkit-rs-llb = { path = "crates/llb" }
buildkit-rs-proto = { path = "crates/proto" }
buildkit-rs-reference = { path = "crates/reference" }
buildkit-rs-util = { path = "crates/util" }

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Grant Gurvis"]
homepage = "https://github.com/sachaarbonel/buildkit-sdk-rs"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/sachaarbonel/buildkit-sdk-rs"
