[package]
name = "buildkit-sdk-client"
description = "Async BuildKit gRPC client and session helpers for Rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/buildkit-sdk-client"
readme = "README.md"

[lib]
name = "buildkit_rs_client"

[dependencies]
bitflags = "2.2.1"
buildkit-rs-llb = { package = "buildkit-sdk-llb", version = "0.1.0", path = "../llb" }
buildkit-rs-proto = { package = "buildkit-sdk-proto", version = "0.1.0", path = "../proto" }
buildkit-rs-util = { package = "buildkit-sdk-util", version = "0.1.0", path = "../util" }
bytes = "1.4.0"
futures = "0.3.28"
hyper-util = "0.1"
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
path-clean = "1.0.1"
pin-project = "1.0.12"
rand = "0.8.5"
thiserror = "2"
tokio = { version = "1.27.0", features = ["process", "net", "macros", "fs"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io"] }
tonic = "0.14"
tonic-health = "0.14"
tower = "0.5"
tower-http = { version = "0.6", features = ["util", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
