[package]
name = "buildkit-sdk-proto"
description = "Generated BuildKit protobuf and gRPC types for Rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/buildkit-sdk-proto"
readme = "README.md"

[lib]
name = "buildkit_rs_proto"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
