[package]
name = "buildkit-sdk-reference"
description = "Docker and OCI image reference parsing for BuildKit-related tooling"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/buildkit-sdk-reference"
readme = "README.md"

[lib]
name = "buildkit_rs_reference"

[dependencies]
once_cell = "1"
regex = "1"
thiserror = "2"
